--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -413,4 +413,5 @@
         <segue reference="d1l-ri-MgK"/>
         <segue reference="Fbi-fK-HAI"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.0" green="0.50196081400000003" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
 </document>
